--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0"
   },
